<resources>
    <string name="app_name" translatable="false">Cars</string>
    <string name="carBaslik" translatable="false">Fast - Carss</string>
    <string name="siyahYazi" translatable="false">Black</string>
    <string name="maviYazi" translatable="false">Blue</string>
    <string name="turuncuYazi" translatable="false">Orange</string>
    <string name="kargoSure" translatable="false">1-3 Business Days</string>
    <string name="kargoBaslik" translatable="false">Shipping</string>
    <string name="carsAciklama" translatable="false">Add new cars to your collection!</string>
    <string name="fiyatYazi" translatable="false">$ 9.99</string>
    <string name="buttonYazi" translatable="false">ADD TO CARD</string>
</resources>